Замена веб сервера legacy на echo
