# services/legacy/internal/controller/server.go
@@ -4,27 +4,18 @@ import (
 	"context"
 	"log/slog"
 	"net/http"
-	"time"
 
 	"github.com/gbh007/buttoners/core/clients/authclient"
-	"github.com/gbh007/buttoners/services/legacy/internal/metrics"
 	"github.com/gbh007/buttoners/services/legacy/internal/repository"
 	"github.com/gbh007/buttoners/services/legacy/internal/service/button"
 	"github.com/gbh007/buttoners/services/legacy/internal/service/user"
+	"github.com/go-playground/validator/v10"
 
 	cMetrics "github.com/gbh007/buttoners/core/metrics"
-	"github.com/prometheus/client_golang/prometheus/promhttp"
-	"github.com/valyala/fasthttp"
-	"github.com/valyala/fasthttp/fasthttpadaptor"
+	"github.com/labstack/echo/v4"
 
 	_ "embed"
 )
-
-//go:embed index.html
-var index_html_body []byte
-
-//go:embed logo.png
-var logo_body []byte
 
 type Controller struct {
 	addr  string
@@ -34,19 +25,19 @@ type Controller struct {
 
 	buttonService *button.Service
 	userSevice    *user.Service
-
-	handleIndex   fasthttp.RequestHandler
-	handleMetrics fasthttp.RequestHandler
 }
 
 type Config struct {
-	APIAddr string
-	Debug   bool
-	DBType  string
-	DBDNS   string
+	APIAddr string `envconfig:"SELF_ADDR" default:":8080"`
+	Debug   bool   `envconfig:"SELF_DEBUG"`
+	DBType  string `envconfig:"DB_TYPE"`
+	DBDNS   string `envconfig:"DB_DNS"`
 
-	AuthAddr  string
-	AuthToken string
+	AuthAddr  string `envconfig:"AUTH_SERVICE_ADDR"`
+	AuthToken string `envconfig:"AUTH_SERVICE_TOKEN"`
+
+	JaegerURL      string `envconfig:"JAEGER_URL" default:"http://jaeger:14268/api/traces"`
+	PrometheusAddr string `envconfig:"PROMETHEUS_ADDR" default:"pushgateway:9091"`
 }
 
 func New(logger *slog.Logger, cfg Config) (*Controller, error) {
@@ -79,76 +70,39 @@ func New(logger *slog.Logger, cfg Config) (*Controller, error) {
 	}, nil
 }
 
-func (c Controller) Serve(ctx context.Context) error {
-	c.handleIndex = (&fasthttp.FS{
-		Root:        "internal/controller",
-		PathRewrite: func(ctx *fasthttp.RequestCtx) []byte { return []byte("/index.html") },
-		SkipCache:   true,
-	}).NewRequestHandler()
-	c.handleMetrics = fasthttpadaptor.NewFastHTTPHandler(promhttp.Handler())
+func (cnt Controller) Serve(ctx context.Context) error {
+	e := echo.New()
+	e.Validator = vldr{validator: validator.New()}
 
-	server := &fasthttp.Server{
-		Handler: c.handler,
+	// FIXME: нужные мидлвари
+	// e.Use()
+
+	e.POST("/api/v1/user", cnt.createUser)
+	e.DELETE("/api/v1/user", cnt.logout)
+	e.GET("/api/v1/user", cnt.getUser)
+
+	e.POST("/api/v1/button", cnt.pressButton)
+	e.GET("/api/v1/button", cnt.buttons)
+	e.GET("/api/v1/button/power", cnt.buttonPower)
+
+	e.HTTPErrorHandler = func(err error, c echo.Context) {
+		c.JSON(http.StatusInternalServerError, errorModel{
+			Message: err.Error(),
+		})
 	}
 
 	go func() {
 		<-ctx.Done()
-		err := server.Shutdown()
+		err := e.Shutdown(context.TODO())
 		if err != nil {
-			c.logger.Error("shutdown http", slog.Any("error", err))
+			cnt.logger.Error("shutdown http", slog.Any("error", err))
 		}
 	}()
 
-	err := server.ListenAndServe(c.addr)
+	err := e.Start(cnt.addr)
 	if err != nil {
 		return err
 	}
 
 	return nil
-}
-
-func (c *Controller) handler(ctx *fasthttp.RequestCtx) {
-	startAt := time.Now()
-	p := string(ctx.Path())
-	method := string(ctx.Request.Header.Method())
-	ctx.SetContentType("application/json")
-
-	switch {
-	case p == "/" && ctx.IsGet():
-		ctx.SetStatusCode(http.StatusOK)
-		ctx.SetContentType("text/html")
-		if c.debug {
-			c.handleIndex(ctx)
-		} else {
-			ctx.SetBody(index_html_body)
-		}
-	case (p == "/logo.png" || p == "/favicon.ico") && ctx.IsGet():
-		ctx.SetStatusCode(http.StatusOK)
-		ctx.SetContentType("image/png")
-		ctx.SetBody(logo_body)
-	case p == "/metrics" && ctx.IsGet():
-		c.handleMetrics(ctx)
-	case p == "/api/user" && ctx.IsGet():
-		c.GetUser(ctx)
-	case p == "/api/user" && ctx.IsPost():
-		c.CreateUser(ctx)
-	case p == "/api/button" && ctx.IsGet():
-		c.Buttons(ctx)
-	case p == "/api/button/power" && ctx.IsGet():
-		c.ButtonPower(ctx)
-	case p == "/api/button" && ctx.IsPost():
-		c.PressButton(ctx)
-	default:
-		ctx.SetStatusCode(http.StatusNoContent)
-	}
-
-	if c.debug {
-		c.logger.Debug("http request",
-			"path", p,
-			"method", method,
-			"code", ctx.Response.Header.StatusCode(),
-		)
-	}
-
-	metrics.RecordHTTPRequest(p, method, ctx.Response.Header.StatusCode(), time.Since(startAt))
 }
